--- a/main.html
+++ b/main.html
@@ -1,43 +1,3 @@
-<?php
-  error_reporting(0);
-  include 'main/conecta.php';
-  include 'main/config.php';
-  // Inicia proceso de registro
-  // validamos que se presione al boton registro
-  if (isset($_POST['submit'])) {
-    // recuperamos los valores que nos da el usuario
-    $nombre = $conecta->real_escape_string($_POST['nombre']);
-    $email = $conecta->real_escape_string($_POST['email']);
-    $tel = $conecta->real_escape_string($_POST['tel']);
-  // consulta para verificar si exite un email igual dentro de la base de datos
-    $nuevo = "SELECT * FROM contacto WHERE Email = '$email' or Tel = '$tel'";
-    $new = $conecta->query($nuevo);
-  // validacion de el criterio de aceptacion
-  if($new->num_rows > 0){
-    $mensaje.="<div class='alert alert-danger alert-dismissible fade show shadow-lg p-3 mb-5 bg-white rounded' role='alert'>
-            <strong>El Telefono y/o Email que ingresaste ya existen</strong> El registro ya existe en la base de datos por favor <a href='main.php'>Click para iniciar sesion</a> .
-            <button type='button' class='close' data-dismiss='alert' aria-label='Close'>
-               <span aria-hidden='true'>&times;</span>
-            </button>
-          </div>";
-    }
-    else {
-      $reg = "INSERT INTO alumnos(Nombre, Email, Tel) VALUES('$nombre','$email','$tel')";
-      $registro = $conecta->query($reg);
-
-      // verificamos que el registro sea valido para mandar una alerta
-      if ($registro > 0) {
-          $mensaje.="<div class='alert alert-success alert-dismissible fade show shadow-lg p-3 mb-5 bg-white rounded' role='alert'>
-             <strong>Registro Exitoso</strong> Ya puedes iniciar sesión <a href='principal.php' class='text-muted text-decoration-none'>Click para iniciar sesion</a> .
-             <button type='button' class='close' data-dismiss='alert' aria-label='Close'>
-                <span aria-hidden='true'>&times;</span>
-             </button>
-           </div>";
-        }
-    }
-}
-  $conecta->close();
-?>
 <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
@@ -142,7 +102,9 @@
    <div class="col-4">
      <div class="carousel-caption d-none d-md-block text-dark">
        <img src="img/logo2.png" alt="Logo KSPORTS">
-       <p class="text-white">Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+       <p style="color: #f9c70a;" class="text1"> Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
      </div>
    </div>
  </div>
@@ -292,16 +254,16 @@
               <div class="card-body text-dark">
                 <!---Empieza formulario-->
                 <div class="container">
-                  <form id="form-Order" class="container form" action="<?php echo $_SERVER['PHP_SELF']; ?>" method="post" id="registro" enctype="multipart/form-data">
+                  <form id="form-Order" class="container form">
                     <div class="row">
                         <div class="col-10">
                           <p>
                             <label for="name">Nombre*</label>
-                            <input type="text" name="nombre" id="name" placeholder="Kary" autofocus autocomplete required class="cajas">
+                            <input type="text" name="name" id="name" placeholder="Kary" autofocus autocomplete required class="cajas">
                           </p>
                           <p>
                             <label for="phone">Teléfono*</label>
-                            <input type="text" name="tel" placeholder="+5525670789" required class="cajas">
+                            <input type="text" name="phone" placeholder="+5525670789" required class="cajas">
                           </p>
                           <p>
                             <label for="email">Email*</label>
@@ -309,11 +271,10 @@
                           </p>
                         </div>
                         <div class="col"> <br><br><br><br><br><br><br>
-                          <input type="submit" name="submit" value="Enviar" id="btn" class="btn btn-warning btn-lg text">
+                          <input type="submit" value="Enviar" id="btn" class="btn btn-warning btn-lg text">
                         </div>
                       </div>
                 </div>
-                <?php echo $mensaje; ?>
                 <!--Termina formulario-->
               </div>
             </div>
@@ -326,9 +287,24 @@
       <hr class="linea">
     </div>
     <!--Termina quinta sección--->
-    <!----->
-    <!----->
+    <!--Empieza footer--->
+    <footer>
+      <div class="container">
+        <div class="row">
+            <div class="col">
+              Síguenos en: <img src="img/logo_social.png" alt="Redes sociales" class="social" style="width: 150px;
+              height: 97px;">
+            </div>
+            <div class="col"> <br>
+              <span class="icon-copyright"></span>KSPORTS
+            </div>
+            <div class="col">
+              <br> WWW.KSPORTS.COM
+            </div>
+        </div>
+      </div>
+    </footer>
+    <!---Termina footer-->
     <!----->
     <script src="js/bootstrap.js"></script> <!-- Se inserta el framework en js  -->
   </body>
-</html>
