--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <!-- Integrar frameworks para el desarrollo de el sistema -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontello.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <script src="js/jquery-3.5.1.min.js"></script> <!-- Integrar JQuery -->
     <title>Inicio | Ksports</title>
     <script>
@@ -55,7 +55,7 @@
   </li>
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <span class="icon-pitch"></span>Deportes
+        <span class="icon-heart-filled"></span>Deportes
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <a class="dropdown-item" href="#">Fútbol</a>
@@ -68,7 +68,7 @@
   </li>
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Entrenamiento
+      <span class="icon-star-filled"></span>Entrenamiento
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       <a class="dropdown-item" href="#">Principiante</a>
@@ -77,7 +77,7 @@
     </div>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"> <span class="icon-chat-alt"></span> Contacto</a>
   </li>
 </ul>
 </div>
